# wasmdbg

./: .gitignore  .wasmdbg_init  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test.wasm  test.wat  todo.txt
src/: breakpoints.rs  cmds.rs  lib.rs  main.rs  nan_preserving_float.rs  readline.rs  value.rs  vm.rs  wasi.rs
src/cmds/: context.rs  execution.rs  format.rs  info.rs  mod.rs  modify.rs  parse.rs  printing.rs  utils.rs
src/wasm/: mod.rs
wasmdbg/: Cargo.toml
wasmdbg-cli/: Cargo.toml
wasmdbg-cli/src/: main.rs  readline.rs  utils.rs
wasmdbg-cli/src/cmds/: context.rs  execution.rs  format.rs  info.rs  mod.rs  modify.rs  parse.rs  printing.rs
wasmdbg/src/: breakpoints.rs  debugger.rs  file.rs  lib.rs  wasi.rs
wasmdbg/src/vm/: imports.rs  instance.rs  memory.rs  mod.rs  table.rs
wasmdbg/src/wasm/: mod.rs  nan_preserving_float.rs  value.rs
